--- a/samplewebproject/index.html
+++ b/samplewebproject/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <script>
+    </script>
+  </head>
   <body>
     <form>
       <label>Enter email</label>
